--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "qatarliving",
   "version": "0.0.0",
+  "engines": {
+    "node": "12.14.1"
+  },
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
@@ -20,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "bootstrap": "^4.4.1",
+    "debug": "^4.1.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.9",
