--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.14",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "bootstrap": "^4.4.1",
     "debug": "^4.1.1",
     "express": "^4.17.1",
+    "hammerjs": "^2.0.8",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.9",
     "multer": "^1.4.2",
