--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@swimlane/ngx-datatable": "^16.0.3",
+    "@types/googlemaps": "^3.39.3",
     "bootstrap": "^4.4.1",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
